# IZ2

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  IZ2  IZ2.cbp  Makefile  README.md  cmake_install.cmake  ex  ex1  ex2  main  unit_test  unit_test_par  unit_test_seq
example/: example_1.c  example_2.c  example_with_both_libs.cpp  example_with_input.c  main.c
gcov/: code_coverage_report.example_example_1.c.html  code_coverage_report.example_example_2.c.html  code_coverage_report.example_example_with_both_libs.cpp.html  code_coverage_report.example_example_with_input.c.html  code_coverage_report.html  code_coverage_report.source_parallel.c.html  code_coverage_report.source_sequential.c.html  code_coverage_report.test_unit_test_par.cpp.html  code_coverage_report.test_unit_test_seq.cpp.html
include/: fill_array.h  main.h  parallel.h  sequential.h
source/: main.c  parallel.c  sequential.c
test/: unit_test.cpp  unit_test_par.cpp  unit_test_seq.cpp
